更新proto的位置
