# proto/public_project/app.swagger.json
@@ -42,6 +42,33 @@
           "out"
         ]
       }
+    },
+    "/public_project/v1/login": {
+      "post": {
+        "summary": "登录接口",
+        "operationId": "AppService_Login",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/public_projectLoginRep"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/public_projectLoginReq"
+            }
+          }
+        ],
+        "tags": [
+          "out"
+        ]
+      }
     }
   },
   "definitions": {
@@ -50,6 +77,32 @@
     },
     "public_projectHelloRsp": {
       "type": "object"
+    },
+    "public_projectLoginRep": {
+      "type": "object",
+      "properties": {
+        "token": {
+          "type": "string"
+        },
+        "refresh_token": {
+          "type": "string"
+        },
+        "expires_in": {
+          "type": "string",
+          "format": "int64"
+        }
+      }
+    },
+    "public_projectLoginReq": {
+      "type": "object",
+      "properties": {
+        "username": {
+          "type": "string"
+        },
+        "password": {
+          "type": "string"
+        }
+      }
     }
   }
 }
